--- a/css/main.css
+++ b/css/main.css
@@ -140,3 +140,79 @@ h1{
     margin-right: 1rem;
 }
 
+
+
+
+/*MODAL WINDOW STUFF*/
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0.8);
+  cursor: pointer;
+}
+
+.modal {
+  position: fixed;
+  width: 500px;
+  height: 280px;
+  z-index: 200;
+  top: calc((100% - 280px)/2);
+  left: calc((100% - 500px)/2);
+  line-height: 1.5;
+  color: dimgray;
+  background-color: #cccccc;
+}
+
+/* use these class names to show or hide the overlay and modal window */
+.show {
+  display: block;
+}
+.hide {
+  display: none;
+}
+.off {
+  transform: translateY(-400%);
+}
+.on {
+  transform: translateY(0);
+}
+
+.cancelButton,
+.saveButton {
+  width: 120px;
+  position: absolute;
+  border: none;
+  background-color: dimgray;
+  color: white;
+  cursor: pointer;
+  padding: 0.25rem 2rem;
+  font-size: 1rem;
+    border-radius: 5px;
+}
+
+.saveButton {
+  bottom: 1rem;
+  right: 4rem;
+}
+
+.cancelButton {
+  bottom: 1rem;
+  left: 4rem;
+}
+
+.modal-header{
+  background-color: dimgray;
+  color: white;
+}
+
+.modal-radio {
+  text-align: center;
+  margin-top: 4rem;
+}
+
+
